--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'JSDongkang-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/JSDongkang-RegularA1.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.App {
+  font-family: 'JSDongkang-Regular';
+}
+
 .MainPhoto {
   width: 30%;
 }
